// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`campaign golden replay > a fixed level + inputs matches the locked snapshot 1`] = `
{
  "bestPrecision": 1,
  "cleared": true,
  "goalReached": true,
  "keysCollected": [
    true,
  ],
  "probes": [
    {
      "pos": {
        "x": 1050.2944021999417,
        "y": 1202.2918673507431,
      },
      "state": "lost",
      "vel": {
        "x": -8.832809624426114,
        "y": 300.4999119689227,
      },
    },
    {
      "pos": {
        "x": 1802.4190845463645,
        "y": 933.9814820251243,
      },
      "state": "lost",
      "vel": {
        "x": 168.20204355824603,
        "y": 197.195498688407,
      },
    },
  ],
  "stars": 2,
}
`;

exports[`campaign golden replay — moving > a fixed moving level + timed inputs matches the locked snapshot 1`] = `
{
  "bestPrecision": 1,
  "cleared": true,
  "goalReached": true,
  "probes": [
    {
      "pos": {
        "x": 1800.613896523002,
        "y": 874.5365520048572,
      },
      "state": "lost",
      "vel": {
        "x": 372.7823425488425,
        "y": 193.07232503858626,
      },
    },
    {
      "pos": {
        "x": 1754.9768480998673,
        "y": 1200.1282485385045,
      },
      "state": "lost",
      "vel": {
        "x": 0.7334456329901506,
        "y": 44.88187771510286,
      },
    },
  ],
  "stars": 2,
}
`;
